<resources>
    <string name="app_name">MagnetoMeter</string>
    <string name="label_light">Light Sensor: %1$.2f</string>
    <string name="label_magnetometer">Magnetometer Sensor: %1$.2f</string>
    <string name="label_location">Location Data: %1$.2 and %2$.2</string>
    <string name="error_no_sensor">No sensor</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- to implement service -->
    <string name="heading">Services In Android</string>
    <string name="startButtonText">Start the Service</string>
    <string name="stopButtonText">Stop the Service</string>
</resources>